--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.datasource.url = jdbc:mysql://localhost:1111/bibliotique
 spring.datasource.username =root
 #spring.datasource.password =
 spring.datasource.password =
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto =update
 server.port=9000
