--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@
 server.tomcat.accesslog.enabled=true
 spring.jpa.hibernate.ddl-auto-update
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:postgresql://dpg-csp51rjtq21c73c7c500-a/bibliotiquedb
-spring.datasource.username=bibliotiquedb_user
-spring.datasource.password=Ro8wankWlZru2N0fIAkMEyPhzBBWZQsF
+spring.datasource.url=jdbc:postgresql://postgresql://dpg-csp5kphu0jms73dr8rp0-a/db_app_16ry
+spring.datasource.username=db_app_16ry_user
+spring.datasource.password=eyEiusDWbXoK0x1bQeGg4qxbahx6XONB
 spring.application.name=cours
 
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
